--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,10 +1,14 @@
 
 .normal {
-  margin-top: 4em;
-  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 500px;
 }
-.footer{
+
+.footer {
   position: absolute;
   bottom: 0;
-left: 50%;
+  left: 50%;
 }
